[gd_scene load_steps=12 format=3 uid="uid://hamal2xvtgxo"]

[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_5760d"]
[ext_resource type="Texture2D" uid="uid://c72j847wy4vkw" path="res://Assets/Background/ClockBackgroundpng.png" id="2_rp70p"]
[ext_resource type="Shader" path="res://Scenes/Navigation/Menu.gdshader" id="3_74v1d"]
[ext_resource type="Texture2D" uid="uid://ct3dpywmu33bx" path="res://Assets/World/Cogs/gear.png" id="3_w4xsa"]
[ext_resource type="PackedScene" uid="uid://dqw7bofdegd70" path="res://Scenes/UI/credits_scene.tscn" id="4_814o4"]
[ext_resource type="FontFile" uid="uid://c6u6sxct38sso" path="res://Assets/Font/Born2bSportyFS.otf" id="4_siksy"]
[ext_resource type="PackedScene" uid="uid://bndt85w77pp80" path="res://Scenes/UI/control.tscn" id="7_mc6l7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2hyh5"]
shader = ExtResource("3_74v1d")
shader_parameter/amount = 0.75

[sub_resource type="Animation" id="Animation_ojlbg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_gntch"]
resource_name = "rotation"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2finn"]
_data = {
"RESET": SubResource("Animation_ojlbg"),
"rotation": SubResource("Animation_gntch")
}

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5760d")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(576.22, 329.327)
scale = Vector2(0.21, 0.21)
texture = ExtResource("2_rp70p")

[node name="Softifyer" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_2hyh5")
layout_mode = 0
offset_left = -10.0
offset_top = -11.0
offset_right = 1162.0
offset_bottom = 659.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Titel" type="Label" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("4_siksy")
theme_override_font_sizes/font_size = 120
text = "Tick Tock Clock"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 35

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer2/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("4_siksy")
theme_override_font_sizes/font_size = 100
text = "Start"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer2/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="Controls" type="Button" parent="MarginContainer/VBoxContainer2/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("4_siksy")
theme_override_font_sizes/font_size = 60
text = "Controls"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer2/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer2/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("4_siksy")
theme_override_font_sizes/font_size = 50
text = "Exit Game"

[node name="ReferenceRect" type="ReferenceRect" parent="MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
tooltip_text = "Credits"
border_width = 0.0

[node name="Credits" type="Sprite2D" parent="MarginContainer/VBoxContainer2/ReferenceRect"]
position = Vector2(61, 60)
scale = Vector2(2, 2)
texture = ExtResource("3_w4xsa")

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/VBoxContainer2/ReferenceRect/Credits"]
libraries = {
"": SubResource("AnimationLibrary_2finn")
}

[node name="CreditsScene" parent="." instance=ExtResource("4_814o4")]
visible = false
layout_mode = 1

[node name="Control" parent="." instance=ExtResource("7_mc6l7")]
visible = false

[connection signal="pressed" from="MarginContainer/VBoxContainer2/CenterContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/CenterContainer/VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/CenterContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer2/ReferenceRect" to="." method="_on_reference_rect_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer2/ReferenceRect" to="." method="_on_reference_rect_mouse_exited"]
